# street-homeless-server

./: .gitignore  .gitmodules  CMakeLists.txt  FetchLib.cmake  README.md  vcpkg.json
cmake/: FindMariaDB.cmake  FindMariaDBClient.cmake
common/: CMakeLists.txt
common/include/: constants.hpp  database.hpp  homeless-common.hpp  inter.hpp  io.hpp  memory.hpp  net.hpp  protobuf.hpp  std_common.hpp  thread.hpp  users.hpp  utils.hpp
common/include/config/: config.hpp
common/include/database/: accessor.hpp  config.hpp  job.hpp  pool.hpp
common/include/inter/: inter_messages.hpp
common/include/io/: in_buffer.hpp  io_concept.hpp  out_buffer.hpp
common/include/memory/: memory_pool.hpp
common/include/net/: abstract_server.hpp  abstract_session.hpp  acceptor.hpp  connector.hpp  message.hpp  network_exceptions.hpp  packet.hpp  packet_handler.hpp  server.hpp  socket_job.hpp
common/include/resources/: abstract_data.hpp  map_data.hpp  region_info.hpp
common/include/thread/: socket_thread.hpp  socket_thread_pool.hpp
common/include/users/: player_data.hpp
common/include/utils/: hash.hpp  mysql_transaction.hpp  net_tools.hpp  point.hpp  random.hpp  singleton.hpp  synchronized.hpp  yaml_config.hpp
common/src/: std_common.cpp
common/src/config/: config.cpp
common/src/database/: accessor.cpp  config.cpp  job.cpp  pool.cpp
common/src/memory/: memory_pool.cpp
common/src/net/: abstract_server.cpp  abstract_session.cpp  acceptor.cpp  connector.cpp  message.cpp  network_exceptions.cpp  packet.cpp  packet_handler.cpp  socket_job.cpp
common/src/resources/: abstract_data.cpp  map_data.cpp  region_info.cpp
common/src/thread/: socket_thread.cpp  socket_thread_pool.cpp
common/src/users/: player_data.cpp
common/src/utils/: hash.cpp  mysql_transaction.cpp  net_tools.cpp  point.cpp  random.cpp  yaml_config.cpp
config/: common.yaml  data.yaml  db_config.yaml  db_config.yaml.sample  game0.yaml  game1.yaml  game2.yaml  game3.yaml  log.yaml  login.yaml  master.yaml
data/maps/: Outdoor1.yaml  Subway Dungeon.yaml  Subway.yaml
data/regions/: 0.yaml  1.yaml
ddl2cpp/: CMakeLists.txt  ddl2cpp.py  dump.bat  homeless-db.h  homeless.ddl  homeless.sql
game/: CMakeLists.txt
game/include/: std.hpp
game/include/handlers/: change_map_req.hpp  check_alive_res.hpp  enter_game_world_req.hpp  migrate_req.hpp  move_player_req.hpp
game/include/items/: item.hpp
game/include/maps/: map.hpp  map_factory.hpp  portal.hpp  region.hpp  region_man.hpp
game/include/mhandlers/: change_map_res.hpp  enter_game_res.hpp  map_management_req.hpp  migrate_region_res.hpp  on_migrate_res.hpp  region_management_req.hpp
game/include/net/: game_handler.hpp  game_server.hpp  game_session.hpp  master.hpp  master_handler.hpp
game/include/objects/: field_object.hpp
game/include/users/: player.hpp  player_stat.hpp
game/src/: main.cpp
game/src/handlers/: change_map_req.cpp  check_alive_res.cpp  enter_game_world_req.cpp  migrate_req.cpp  move_player_req.cpp
game/src/item/: item.cpp
game/src/maps/: map.cpp  map_factory.cpp  portal.cpp  region.cpp  region_man.cpp
game/src/mhandlers/: change_map_res.cpp  enter_game_res.cpp  map_management_req.cpp  migrate_region_res.cpp  on_migrate_res.cpp  region_management_req.cpp
game/src/net/: game_handler.cpp  game_server.cpp  game_session.cpp  master.cpp  master_handler.cpp
game/src/objects/: field_object.cpp
game/src/users/: player.cpp  player_stat.cpp
login/: CMakeLists.txt
login/include/: std.hpp
login/include/handlers/: character_list_req.hpp  check_alive_res.hpp  create_character_req.hpp  delete_character_req.hpp  login_req.hpp  select_character_req.hpp
login/include/mhandlers/: change_map_res.hpp
login/include/net/: handler.hpp  login_acceptor.hpp  login_handler.hpp  login_server.hpp  login_session.hpp  master.hpp  master_handler.hpp
login/src/: main.cpp  std.cpp
login/src/handlers/: character_list_req.cpp  check_alive_res.cpp  create_character_req.cpp  delete_character_req.cpp  login_req.cpp  select_character_req.cpp
login/src/mhandlers/: change_map_res.cpp
login/src/net/: handler.cpp  login_acceptor.cpp  login_handler.cpp  login_server.cpp  login_session.cpp  master.cpp  master_handler.cpp
master/: CMakeLists.txt
master/include/: std.hpp
master/include/handlers/: change_map_req.hpp  enter_game_req.hpp  enter_world_req.hpp  map_management_res.hpp  migrate_region_req.hpp  on_migrate_req.hpp  region_management_res.hpp  setup_req.hpp  sign_out_req.hpp
master/include/net/: handler.hpp  master_server.hpp  master_session.hpp
master/include/users/: abstract_request.hpp  change_map_req.hpp  change_map_request.hpp  db_user_job.hpp  migration_region_request.hpp  user_record.hpp
master/include/world/: game_world.hpp  hangout.hpp  map_state.hpp  region.hpp
master/src/: main.cpp
master/src/handlers/: change_map_req.cpp  enter_game_req.cpp  enter_world_req.cpp  map_management_res.cpp  migrate_region_req.cpp  on_migrate_req.cpp  region_management_res.cpp  setup_req.cpp  sign_out_req.cpp
master/src/net/: handler.cpp  master_server.cpp  master_session.cpp
master/src/users/: abstract_request.cpp  change_map_req.cpp  change_map_request.cpp  db_user_job.cpp  migration_region_request.cpp  user_record.cpp
master/src/world/: game_world.cpp  hangout.cpp  map_state.cpp  region.cpp
